@@ -246,11 +246,18 @@ static ota_3table_t oma_ota_attributes[] = {
     { "TYPE", "PXAUTHINFO", 0x59 },
     { "TYPE", "NAPAUTHINFO", 0x5A },
     { "TYPE", "ACCESS", 0x5B },
+    { "TYPE", "BEARERINFO", 0x5C },
+    { "TYPE", "DNS-ADDRINFO", 0x5D },
     { "TYPE", "CLIENTIDENTITY", 0x58 },
     { "TYPE", "APPLICATION", 0x55, 1 },
     { "TYPE", "APPADDR", 0x56, 1 },
     { "TYPE", "APPAUTH", 0x57, 1 },
     { "TYPE", "RESOURCE", 0x59, 1 },
+    { "TYPE", "WLAN", 0x5A, 1 },
+    { "TYPE", "SEC-SSID", 0x5B, 1 },
+    { "TYPE", "EAP", 0x5C, 1 },
+    { "TYPE", "CERT", 0x5D, 1 },
+    { "TYPE", "WEPKEY", 0x5E, 1 },
     { "TYPE", "INLINE", 0x50 },
     { "NAME", "NAME", 0x7 },
     { "NAME", "NAP-ADDRESS", 0x8 },
@@ -331,6 +338,45 @@ static ota_3table_t oma_ota_attributes[] = {
     { "NAME", "TO-PROXY", 0x39, 1 },
     { "NAME", "URI", 0x3A, 1 },
     { "NAME", "RULE", 0x3B, 1 },
+    { "NAME", "APPREF", 0x3C, 1 },
+    { "NAME", "TO-APPREF", 0x3D, 1 },
+    { "NAME", "PRI-SSID", 0x3E, 1 },
+    { "NAME", "PRI-U-SSID", 0x3F, 1 },
+    { "NAME", "PRI-H-SSID", 0x40, 1 },
+    { "NAME", "S-SSID", 0x41, 1 },
+    { "NAME", "S-U-SSID", 0x42, 1 },
+    { "NAME", "NETMODE", 0x43, 1 },
+    { "NAME", "SECMODE", 0x44, 1 },
+    { "NAME", "EAPTYPE", 0x45, 1 },
+    { "NAME", "USERNAME", 0x46, 1 },
+    { "NAME", "PASSWORD", 0x47, 1 },
+    { "NAME", "REALM", 0x48, 1 },
+    { "NAME", "USE-PSEUD", 0x49, 1 },
+    { "NAME", "ENCAPS", 0x5B, 1 },
+    { "NAME", "VER-SER-REALM", 0x4C, 1 },
+    { "NAME", "CLIENT-AUTH", 0x4D, 1 },
+    { "NAME", "SES-VAL-TIME", 0x4E, 1 },
+    { "NAME", "CIP-SUIT", 0x4F, 1 },
+    { "NAME", "PEAP-V0", 0x60, 1 },
+    { "NAME", "PEAP-V1", 0x61, 1 },
+    { "NAME", "PEAP-V2", 0x62, 1 },
+    { "NAME", "ISS-NAME", 0x63, 1 },
+    { "NAME", "SUB-NAME", 0x64, 1 },
+    { "NAME", "CERT-TYPE", 0x65, 1 },
+    { "NAME", "SER-NUM", 0x66, 1 },
+    { "NAME", "SUB-KEY-ID", 0x67, 1 },
+    { "NAME", "THUMBPRINT", 0x68, 1 },
+    { "NAME", "WPA-PRES-KEY-ASC", 0x69, 1 },
+    { "NAME", "WPA-PRES-KEY-HEX", 0x6A, 1 },
+    { "NAME", "WEPKEYIND", 0x6B, 1 },
+    { "NAME", "WEPAUTHMODE", 0x6C, 1 },
+    { "NAME", "LENGTH", 0x6D, 1 },
+    { "NAME", "INDEX", 0x6E, 1 },
+    { "NAME", "DATA", 0x6F, 1 },
+    { "NAME", "WLANHAND", 0x70, 1 },
+    { "NAME", "EDIT-SET", 0x71, 1 },
+    { "NAME", "VIEW-SET", 0x72, 1 },
+    { "NAME", "FORW-SET", 0x73, 1 },
     { "NAME", "INLINE", 0x5 },
     { "VALUE", "IPV4", 0x85 },
     { "VALUE", "IPV6", 0x86 },
@@ -379,6 +425,8 @@ static ota_3table_t oma_ota_attributes[] = {
     { "VALUE", "MOBITEX-MPAK", 0xB8 },
     { "VALUE", "CDMA2000-1X-SIMPLE-IP", 0xB9 },
     { "VALUE", "CDMA2000-1X-MOBILE-IP", 0xBA },
+    { "VALUE", "3G-GSM", 0xBB },
+    { "VALUE", "WLAN", 0xBC },
     { "VALUE", "AUTOBAUDING", 0xC5 },
     { "VALUE", "CL-WSP", 0xCA },
     { "VALUE", "CO-WSP", 0xCB },
